"booking_button_title" = "Book now";
"welcome_message" = "Welcome";

